# CPIdeas-Plus-Viewer

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PRODUCT_BUNDLE.md  PRODUCT_BUNDLE.zh-CN.md  PRODUCT_RESULT.md  PRODUCT_RESULT.zh-CN.md
examples/product_batch/: batch_index.json
examples/product_batch/0001_demo/: run.json
examples/product_batch/0001_demo/package/config/: package.json
examples/product_batch/0001_demo/package/solutions/: main.cpp
examples/product_batch/0001_demo/package/statements/: statement.md
examples/product_single/package/generator/: generator.cpp
src/cpideas_plus_viewer/: __init__.py  cli.py  server.py
tests/: test_viewer.py
