[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cpideas-plus-viewer"
version = "0.1.0"
description = "Read-only local viewer for CPIdeas Plus product results."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "CPIdeas Plus" }
]
dependencies = [
  "bleach>=6.2.0",
  "markdown>=3.7",
]

[project.scripts]
cpideas-viewer = "cpideas_plus_viewer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
